[package]
name = "add-osc-8-hyperlink"
version = "0.1.0"
edition = "2024"
description = "Add OSC 8 hyperlinks to file paths in terminal output"
license = "MIT"
repository = "https://github.com/konradko/add-osc-8-hyperlink-rs"
keywords = ["terminal", "hyperlink", "osc8", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
regex = "1"
hostname = "0.3"

[profile.release]
lto = true
strip = true
